examples/st2110/invalid/dup_group_type_mismatch.sdp
v=0
o=- 1234567890 1 IN IP4 192.168.1.1
s=ST 2110 DUP — media type mismatch (invalid)
t=0 0
a=group:DUP leg1 leg2
a=ts-refclk:ptp=IEEE1588-2008:00-11-22-FF-FE-33-44-55:0
m=video 5000 RTP/AVP 96
c=IN IP4 239.100.0.1/64
a=mid:leg1
a=rtpmap:96 raw/90000
a=fmtp:96 sampling=YCbCr-4:2:2; width=1920; height=1080; exactframerate=25; depth=10; TCS=SDR; colorimetry=BT709; PM=2110GPM; SSN=ST2110-20:2022; TP=2110TPN
a=mediaclk:direct=0
m=audio 5010 RTP/AVP 97
c=IN IP4 239.100.0.2/64
a=mid:leg2
a=rtpmap:97 L24/48000/8
a=fmtp:97 channel-order=SMPTE2110.(ST)
a=mediaclk:direct=0
